# drone_3d_reconstruction

./: .gitignore  Dockerfile  README.md  apply_heatmaps.py  environment.yml  orchestrate.py  pyproject.toml  requirements.txt
src/colmap_reconstruction/: __init__.py  apply_heatmaps.py  live_graph.py  object_pins.py  orchestrate.py  paint_heatmap.py
tests/: test_node_associations.py  test_paint_heatmap.py
